Add base resource